--- a/paper/sections/kfacs.tex
+++ b/paper/sections/kfacs.tex
@@ -147,7 +147,7 @@ Using the notation $\vg^{(l)}_{n,\alpha} = \nabla_{\partial_\vx^\alpha \vz_n^{(l
     \sum_{\lvert \alpha \rvert\le k} \left( \partial_\vx^\alpha \vz^{(l-1)}_n \otimes \vg_{n,\alpha}^{(l)} \right)^\top\right]. 
 \end{equation}
 \todo[inline]{not sure, whether this works without any structure in $\mA_n$ or without another approximation}
-Using the crude approximation $\sum_{m=1}^M \mA_m\sum_{m=1}^M \mB_m \approx M^{-1}\sum_{m=1}^M \mA_m \mB_m$ we compute 
+Using the crude approximation $\sum_{m=1}^M \mB_m\sum_{m=1}^M \mC_m \approx M^{-1}\sum_{m=1}^M \mB_m \mC_m$ we compute 
 \begin{align}
     \begin{split}
         & \sum_{n=1}^N
