--- a/paper/sections/experimental_details.tex
+++ b/paper/sections/experimental_details.tex
@@ -29,6 +29,29 @@ We compare three MLP architectures of increasing size, each of whose linear laye
 For the biggest architecture, ENGD-full leads to out-of-memory errors.
 \Cref{fig:poisson2d-appendix} visualizes the results.
 
+\begin{figure}[!h]
+  \centering
+  \begin{subfigure}[t]{1.0\linewidth}
+    \caption{}\label{subfig:poisson2d-time}
+    % trim legend, xlabel and xticklabels
+    % [trim={left bottom right top},clip]
+    \includegraphics[trim={0 1.3cm 0 0},clip]{../kfac_pinns_exp/exp17_groupplot_poisson2d/l2_error_over_time.pdf}
+    % trim the legend and titles
+    % [trim={left bottom right top},clip]
+    \includegraphics[trim={0 0.5cm 0 0.3cm},clip]{../kfac_pinns_exp/exp17_groupplot_poisson2d/loss_over_time.pdf}
+  \end{subfigure}
+  \begin{subfigure}[t]{1.0\linewidth}
+    \caption{}\label{subfig:poisson2d-step}
+    % trim the legend, xlabel and xticklabels
+    % [trim={left bottom right top},clip]
+    \includegraphics[trim={0 1.3cm 0 0.3cm},clip]{../kfac_pinns_exp/exp17_groupplot_poisson2d/l2_error_over_step.pdf}
+    % trim the titles
+    \includegraphics[trim={0 0 0 0.3cm},clip]{../kfac_pinns_exp/exp17_groupplot_poisson2d/loss_over_step.pdf}
+  \end{subfigure}
+  \caption{ Training loss and evaluation $L_2$ error for learning the solution to a 2d Poisson equation over (\subref{subfig:poisson2d-time}) time and (\subref{subfig:poisson2d-step}) steps.
+    Column are different neural networks.}\label{fig:poisson2d-appendix}
+\end{figure}
+
 \paragraph{Best run details}
 The runs shown in \Cref{fig:poisson2d-appendix} correspond to the following hyper-parameters:
 \begin{itemize}
@@ -70,30 +93,45 @@ The runs shown in \Cref{fig:poisson2d-appendix} correspond to the following hype
   \end{itemize}
 \end{itemize}
 
-\begin{figure}[!h]
-  \centering
-  \begin{subfigure}[t]{1.0\linewidth}
-    \caption{}\label{subfig:poisson2d-time}
-    % trim legend, xlabel and xticklabels
-    % [trim={left bottom right top},clip]
-    \includegraphics[trim={0 1.3cm 0 0},clip]{../kfac_pinns_exp/exp17_groupplot_poisson2d/l2_error_over_time.pdf}
-    % trim the legend and titles
-    % [trim={left bottom right top},clip]
-    \includegraphics[trim={0 0.5cm 0 0.3cm},clip]{../kfac_pinns_exp/exp17_groupplot_poisson2d/loss_over_time.pdf}
-  \end{subfigure}
-  \begin{subfigure}[t]{1.0\linewidth}
-    \caption{}\label{subfig:poisson2d-step}
-    % trim the legend, xlabel and xticklabels
-    % [trim={left bottom right top},clip]
-    \includegraphics[trim={0 1.3cm 0 0.3cm},clip]{../kfac_pinns_exp/exp17_groupplot_poisson2d/l2_error_over_step.pdf}
-    % trim the titles
-    \includegraphics[trim={0 0 0 0.3cm},clip]{../kfac_pinns_exp/exp17_groupplot_poisson2d/loss_over_step.pdf}
-  \end{subfigure}
-  \caption{ Training loss and evaluation $L_2$ error for learning the solution to a 2d Poisson equation over (\subref{subfig:poisson2d-time}) time and (\subref{subfig:poisson2d-step}) steps.
-    Column are different neural networks.}\label{fig:poisson2d-appendix}
-\end{figure}
+\paragraph{Search space details:} The runs shown in \Cref{fig:poisson2d-appendix} were determined to be the best via a search with approximately 50 runs on the following search spaces which were obtained by refining an initially wider search ($\mathcal{C}$ denotes a categorical, $\mathcal{U}$ a uniform, and $\mathcal{LU}$ a log-uniform distribution):
+\begin{itemize}
+\item $2\to 64\to 1$ MLP with $D=257$
+  \begin{itemize}
+    \def\pathToRuns{../kfac_pinns_exp/exp09_reproduce_poisson2d/tex}
+  \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
+  \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
+  \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
+  \item \textbf{LBFGS:} \input{\pathToRuns/sweep_LBFGS.tex}
+  \item \textbf{ENGD (full):} \input{\pathToRuns/sweep_ENGD_full.tex}
+  \item \textbf{ENGD (layer-wise):} \input{\pathToRuns/sweep_ENGD_per_layer.tex}
+  \item \textbf{KFAC} \input{\pathToRuns/sweep_KFAC.tex}
+  \item \textbf{KFAC*} \input{\pathToRuns/sweep_KFAC_auto.tex}
+  \end{itemize}
 
-\clearpage
+\item $2 \to 64 \to 64 \to 48 \to 48 \to 1$ MLP with $D=\num{9873}$
+  \begin{itemize}
+    \def\pathToRuns{../kfac_pinns_exp/exp15_poisson2d_deepwide/tex}
+  \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
+  \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
+  \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
+  \item \textbf{LBFGS:} \input{\pathToRuns/sweep_LBFGS.tex}
+  \item \textbf{ENGD (full):} \input{\pathToRuns/sweep_ENGD_full.tex}
+  \item \textbf{ENGD (layer-wise):} \input{\pathToRuns/sweep_ENGD_per_layer.tex}
+  \item \textbf{KFAC} \input{\pathToRuns/sweep_KFAC.tex}
+  \item \textbf{KFAC*} \input{\pathToRuns/sweep_KFAC_auto.tex}
+  \end{itemize}
+
+\item $2 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{116097}$
+  \begin{itemize}
+    \def\pathToRuns{../kfac_pinns_exp/exp20_poisson2d_mlp_tanh_256/tex}
+  \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
+  \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
+  \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
+  \item \textbf{LBFGS:} \input{\pathToRuns/sweep_LBFGS.tex}
+  \item \textbf{KFAC} \input{\pathToRuns/sweep_KFAC.tex}
+  \item \textbf{KFAC*} \input{\pathToRuns/sweep_KFAC_auto.tex}
+  \end{itemize}
+\end{itemize}
 
 \subsection{Five-dimensional Poisson Equation}
 
