--- a/paper/sections/kfacs.tex
+++ b/paper/sections/kfacs.tex
@@ -56,7 +56,7 @@ Now we can use any Kronecker-factored approximation for feedforward networks wit
 %\paragraph{Kronecker approximation of the PDE Gramian}
 
 %\paragraph{Individual steps} 
-Using the crude approximation $\sum_{m=1}^M \mA_m\sum_{m=1}^M \mB_m \approx M^{-1}\sum_{m=1}^M \mA_m \mB_m$ we compute 
+Using the crude approximation $M^{-1}\sum_{m=1}^M \mA_m\sum_{m=1}^M \mB_m \approx \sum_{m=1}^M \mA_m \mB_m$ we compute 
 \begin{align*}
     & \sum_{n=1}^N
     \left[\sum_{s=1}^S \left( \mZ^{(l-1)}_{n,s}\otimes \vg_{n,s}^{(l)} \right)
@@ -64,13 +64,13 @@ Using the crude approximation $\sum_{m=1}^M \mA_m\sum_{m=1}^M \mB_m \approx M^{-
     \sum_{s=1}^S \left( \mZ
     ^{(l-1)}_{n,s}\otimes \vg_{n,s}^{(l)} \right)^\top\right]
     \\ \approx & \;
-    \frac{1}{S}\sum_{n=1}^N
+    S\sum_{n=1}^N
     \left[\sum_{s=1}^S \left( \mZ^{(l-1)}_{n,s}\otimes \vg_{n,s}^{(l)} \right)
     \cdot
     \left( \mZ
     ^{(l-1)}_{n,s}\otimes \vg_{n,s}^{(l)} \right)^\top\right]
     \\ = & \;
-    \frac{1}{S}\sum_{n=1}^N
+    S\sum_{n=1}^N
     \left[\sum_{s=1}^S \left( \mZ^{(l-1)}_{n,s}{\mZ
     ^{(l-1)}_{n,s}}^\top\otimes \vg_{n,s}^{(l)}{\vg_{n,s}^{(l)}}^\top \right)
     \right]
@@ -146,8 +146,7 @@ Using the notation $\vg^{(l)}_{n,\alpha} = \nabla_{\partial_\vx^\alpha \vz_n^{(l
     \mA_n 
     \sum_{\lvert \alpha \rvert\le k} \left( \partial_\vx^\alpha \vz^{(l-1)}_n \otimes \vg_{n,\alpha}^{(l)} \right)^\top\right]. 
 \end{equation}
-\todo[inline]{not sure, whether this works without any structure in $\mA_n$ or without another approximation}
-Using the crude approximation $\sum_{m=1}^M \mB_m\sum_{m=1}^M \mC_m \approx M^{-1}\sum_{m=1}^M \mB_m \mC_m$ we compute 
+Using the crude approximation $M^{-1}\sum_{m=1}^M \mB_m\sum_{m=1}^M \mC_m \approx \sum_{m=1}^M \mB_m \mC_m$ we compute 
 \begin{align}
     \begin{split}
         & \sum_{n=1}^N
@@ -155,16 +154,16 @@ Using the crude approximation $\sum_{m=1}^M \mB_m\sum_{m=1}^M \mC_m \approx M^{-
     \mA_n
     \sum_{\lvert \alpha \rvert\le k} \left( \partial_\vx^\alpha \vz^{(l-1)}_n\otimes \vg_{n,\alpha}^{(l)} \right)^\top\right]
     \\ \approx & \;
-    \frac{1}{\binom{d+k}{d}} \sum_{n=1}^N
+    \binom{d+k}{d} \sum_{n=1}^N
     \left[\sum_{\lvert \alpha \rvert\le k} \left( \partial_\vx^\alpha \vz^{(l-1)}_n \otimes \vg_{n,\alpha}^{(l)} \right)
     \mA_n
     \left( \partial_\vx^\alpha \vz^{(l-1)}_n \otimes \vg_{n,\alpha}^{(l)} \right)^\top\right]
     \\ = & \;
-    \frac{1}{\binom{d+k}{d}}\sum_{n=1}^N
+    \binom{d+k}{d}\sum_{n=1}^N
     \left[\sum_{\lvert \alpha \rvert\le k} \left( \partial_\vx^\alpha \vz^{(l-1)}_n{\partial_\vx^\alpha \vz^{(l-1)}_n}^\top\right) \otimes \left(\vg_{n,\alpha}^{(l)} \mA_n{\vg_{n,\alpha}^{(l)}}^\top \right)
     \right]
     \\ \approx & \;
-    \frac{1}{N\binom{d+k}{d}}\left[\sum_{n=1}^N \sum_{\lvert \alpha \rvert\le k} \partial_\vx^\alpha \vz^{(l-1)}_n{\partial_\vx^\alpha \vz^{(l-1)}_n}^\top \right]
+    \frac{\binom{d+k}{d}}{N}\left[\sum_{n=1}^N \sum_{\lvert \alpha \rvert\le k} \partial_\vx^\alpha \vz^{(l-1)}_n{\partial_\vx^\alpha \vz^{(l-1)}_n}^\top \right]
     \otimes
     \left[\sum_{n=1}^N\sum_{\lvert \alpha \rvert\le k} \vg^{(l)}_{n,\alpha}\mA_n{\vg^{(l)}_{n,\alpha}}^\top \right],
     \end{split}
@@ -174,7 +173,7 @@ which gives the approximation
 \begin{align*}\label{eq:KFAC-PINNs-general}
     \hat{\mG}%^{\textup{exp}}
     (\mW^{(l)})
-    \coloneqq \frac{1}{N^2 \binom{d+k}{d}}
+    \coloneqq \frac{\binom{d+k}{d}}{N^2}
     \left[\sum_{n=1}^N \sum_{\lvert \alpha \rvert \le k} %\mZ^{(l-1)}_{n,\alpha}{\mZ^{(l-1)}_{n,\alpha}}^\top 
     \partial_\vx^\alpha \vz_n^{(l-1)} {\partial_\vx^\alpha \vz_n^{(l-1)}}^\top\right] 
     \otimes
@@ -282,7 +281,7 @@ the Kronecker-factored approximation takes the form
 \begin{align*}\label{eq:KFAC-PINNs-general}
     \hat{\mG}%^{\textup{exp}}
     (\mW^{(l)})
-    \coloneqq \frac{1}{N^2 \binom{d+k}{d}}
+    \coloneqq \frac{\binom{d+k}{d}}{N^2}
     \left[\sum_{n=1}^N \sum_{\lvert \alpha \rvert \le k} %\mZ^{(l-1)}_{n,\alpha}{\mZ^{(l-1)}_{n,\alpha}}^\top 
     c_\alpha^2\partial_\vx^\alpha \vz_n^{(l-1)} {\partial_\vx^\alpha \vz_n^{(l-1)}}^\top\right] 
     \otimes
